--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 body {
-  background-image: url("Imagens/Hydro.jpg");
-  background-size: cover;
-}
-
+    background-image: url("Imagens/Hydro.jpg");
+    background-size: cover;
+  }
+  
 .header {
-  text-align: center
-}
-
+    text-align: center
+  }
+  
 .c1 {
-  font-family: "Lucida Console", monospace;
-  color: #fff
-}
-
+    font-family: "Lucida Console", monospace;
+    color: #fff
+  }
+  
 .c2 {
-  font-size: 20px;
-  margin-left: 290px; 
-}
-
-.foto {
-  border-radius: 50%;
-}
+    font-size: 20px;
+    margin-left: 400px;
+  }
+  
+.img {
+    border-radius: 30px;
+  }
